crates/conductor-timeline/tests/snapshots/replay__fixture_seed_424242.snap
---
source: crates/conductor-timeline/tests/replay.rs
expression: transitions
---
[
    PhaseTransition {
        index: 0,
        name: "baseline",
        elapsed_ms: 90028,
    },
    PhaseTransition {
        index: 1,
        name: "spike",
        elapsed_ms: 150075,
    },
]
