crates/conductor-timeline/tests/snapshots/replay__fixture_seed_7.snap
---
source: crates/conductor-timeline/tests/replay.rs
expression: transitions
---
[
    PhaseTransition {
        index: 0,
        name: "baseline",
        elapsed_ms: 90049,
    },
    PhaseTransition {
        index: 1,
        name: "spike",
        elapsed_ms: 150060,
    },
]
